--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ endif()
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
+set(COMPILE_WARNING_AS_ERROR True)
+
+add_subdirectory(libs/minhook)
 
 # Source Files
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "src/*.c" "src/*.cpp" "src/*.h" "src/*.hpp")
@@ -19,6 +22,7 @@ add_library(unrealsdk SHARED
     "libs/loguru/loguru.hpp"
 )
 target_include_directories(unrealsdk PUBLIC "src" "libs/loguru")
+target_link_libraries(unrealsdk PUBLIC minhook)
 
 target_compile_definitions(unrealsdk PUBLIC "${SDK_UE_VERSION}" "ARCH_$<UPPER_CASE:${SDK_ARCH}>")
 # CMake by default defines NDEBUG in release, we also want the opposite
