rewrite logging natively
went through a few logging libraries but nothing really worked that well

loguru has a really annoying atexit line you can't disable, which likes to cause crashes since the console's been deleted
it also uses a lot of native calls which I've replaced with base c++ stuff
and the new interface is a lot simpler, and should let something including this as a lib completely redirect logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿cmake_minimum_required (VERSION 3.24)
+cmake_minimum_required (VERSION 3.24)
 
 project(unrealsdk VERSION 1.0.0)
 
@@ -6,7 +6,7 @@ if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/user-includes.cmake")
    include("${CMAKE_CURRENT_SOURCE_DIR}/user-includes.cmake")
 endif()
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 set(CMAKE_COMPILE_WARNING_AS_ERROR True)
@@ -23,12 +23,8 @@ add_subdirectory(libs/minhook)
 # Source Files
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "src/*.c" "src/*.cpp" "src/*.h" "src/*.hpp")
 
-add_library(unrealsdk SHARED
-    ${sources}
-    "libs/loguru/loguru.cpp"
-    "libs/loguru/loguru.hpp"
-)
-target_include_directories(unrealsdk PUBLIC "src" "libs/loguru")
+add_library(unrealsdk SHARED ${sources})
+target_include_directories(unrealsdk PUBLIC "src")
 target_link_libraries(unrealsdk PUBLIC minhook)
 
 target_compile_definitions(unrealsdk PUBLIC "${SDK_UE_VERSION}" "ARCH_$<UPPER_CASE:${SDK_ARCH}>")
