--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/fmt"]
 	path = libs/fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "libs/cmake-git-version-tracking"]
+	path = libs/cmake-git-version-tracking
+	url = git@github.com:andrew-hardin/cmake-git-version-tracking.git
