tweak git watcher to better support multiple instances

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.24)
+﻿cmake_minimum_required(VERSION 3.24)
 
 project(unrealsdk)
 
@@ -30,9 +30,8 @@ try_compile(supports_format
     CXX_STANDARD 20
 )
 
-set(PRE_CONFIGURE_FILE "src/unrealsdk/version.cpp.in")
-set(POST_CONFIGURE_FILE "${CMAKE_CURRENT_BINARY_DIR}/version.cpp")
-set(GIT_WORKING_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
+set(GIT_PRE_CONFIGURE_FILE "src/unrealsdk/version.cpp.in")
+set(GIT_POST_CONFIGURE_FILE "${CMAKE_CURRENT_BINARY_DIR}/version.cpp")
 include(cmake/git_watcher.cmake)
 
 add_subdirectory(libs/minhook)
@@ -83,7 +82,7 @@ endif()
 # How we include sources depends on what sort of library we're building as
 # Including this in the interface target would force them to be public
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "src/unrealsdk/*.cpp" "src/unrealsdk/*.h")
-list(APPEND sources ${POST_CONFIGURE_FILE})
+list(APPEND sources ${GIT_POST_CONFIGURE_FILE})
 
 if(NOT UNREALSDK_SHARED)
     add_library(unrealsdk OBJECT)
