--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,10 +195,6 @@ jobs:
         key: ${{ runner.os }}-clang-${{ env.CLANG_VERSION }}
         fail-on-cache-miss: true
 
-    # Needed for clang tidy to enable `-export-fixes`
-    - name: Install pyyaml
-      run: pip install pyyaml
-
     - name: Checkout repository and submodules
       uses: actions/checkout@v3
       with:
@@ -210,13 +206,7 @@ jobs:
 
     - name: Run clang-tidy
       shell: bash # To follow the shebang
-      run: run-clang-tidy -j ${{ env.CLANG_TIDY_JOBS }} -p out/build/${{ matrix.preset }} -export-fixes clang-tidy-fixes.yml
-      continue-on-error: true
-
-    - name: Process clang-tidy warnings
-      uses: asarium/clang-tidy-action@v1
-      with:
-        fixesFile: clang-tidy-fixes.yml
+      run: run-clang-tidy -j ${{ env.CLANG_TIDY_JOBS }} -p out/build/${{ matrix.preset }}
 
   clang-format:
     runs-on: windows-latest
