use cruft for common dotfiles

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 .vs
 .vscode
+
+# C/C++ excludes
+.cache/clangd
+.gdbinit
 out
 
 # User scripts with templates
 postbuild
 postbuild.bat
-
-.gdbinit
 
 # CMake (from https://github.com/github/gitignore/blob/main/CMake.gitignore)
 CMakeLists.txt.user
