--- a/.typos.toml
+++ b/.typos.toml
@@ -1,6 +1,9 @@
 [files]
 extend-exclude = [
-    "libs/*",
+    "libs/fmt",
+    "libs/minhook",
+    "libs/pybind11",
+    "libs/unrealsdk/libs",
     "LICENSE",
     ".typos.toml"
 ]
